--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,22 +1,30 @@
 <footer>
-    <a href="https://iut.univ-lyon1.fr">Site de l'IUT</a>
-    <a href="https://www.univ-lyon1.fr">Site de l'Université</a>
-    <a href="https://www.messervices.etudiant.gouv.fr/envole/">Site pour la bourse</a>
-    <a href="https://mail.univ-lyon1.fr/">Site boîte mail universitaire</a>
-    <a href="https://clarolineconnect.univ-lyon1.fr/">Site de clarolineconnect</a>
-    <a href="https://tomuss.univ-lyon1.fr/">Site pour les notes</a>
-    <a href="https://www.google.fr/maps ">Google maps</a>
-    <a href="https://www.tcl.fr/">Site tcl</a>
-    <a href="https://e-tecely.tcl.fr/">Site E-TCL</a>
-    <a href="https://velov.grandlyon.com/fr/home">Site velov</a>
-    <a href="https://izly.fr/">Site izly</a>
-    <a href="https://play.google.com/store/apps/details?id=fr.smoney.android.izly.REC&hl=fr&gl=US">Appli izly sur
-        gooogle play</a>
-    <a href="https://apps.apple.com/fr/app/izly/id956519643">Appli izly sur apple-store</a>
-    <a href="https://apps.apple.com/fr/app/edt-univ/id1031220382">Appli appli emploi du temps apple-store</a>
-    <a href="https://play.google.com/store/apps/details?id=fr.salanon.edtuniv&hl=en_US&gl=US">Appli appli emploi du
-        temps google play</a>
-    <a href="http://edt.univ-lyon1.fr">Site emploi du temps</a>
-    <a href="https://suaps.univ-lyon1.fr/inscriptions-pratique/secteur-iut/faire-du-sport-a-liut">Site pour le sport</a>
-
+    <section>
+        <h1>But en Général</h1>
+        <a href="https://iut.univ-lyon1.fr">Site de l'IUT</a>
+        <a href="https://www.univ-lyon1.fr">Site de l'Université</a>
+        <a href="https://www.messervices.etudiant.gouv.fr/envole/">Site pour la bourse</a>
+        <a href="https://mail.univ-lyon1.fr/">Site boîte mail universitaire</a>
+        <a href="https://clarolineconnect.univ-lyon1.fr/">Site de clarolineconnect</a>
+        <a href="https://tomuss.univ-lyon1.fr/">Site pour les notes</a>
+    </section>
+    <section>
+        <h1>Autour de l'IUT</h1>
+        <a href="https://www.google.fr/maps ">Google maps</a>
+        <a href="https://www.tcl.fr/">Site tcl</a>
+        <a href="https://e-tecely.tcl.fr/">Site E-TCL</a>
+        <a href="https://velov.grandlyon.com/fr/home">Site velov</a>
+        <a href="https://izly.fr/">Site izly</a>
+        <a href="https://play.google.com/store/apps/details?id=fr.smoney.android.izly.REC&hl=fr&gl=US">Appli izly sur
+            gooogle play</a>
+        <a href="https://apps.apple.com/fr/app/izly/id956519643">Appli izly sur apple-store</a>
+    </section>
+    <section>
+        <h1>But Informatique</h1>
+        <a href="https://apps.apple.com/fr/app/edt-univ/id1031220382">Appli appli emploi du temps apple-store</a>
+        <a href="https://play.google.com/store/apps/details?id=fr.salanon.edtuniv&hl=en_US&gl=US">Appli appli emploi du
+            temps google play</a>
+        <a href="http://edt.univ-lyon1.fr">Site emploi du temps</a>
+        <a href="https://suaps.univ-lyon1.fr/inscriptions-pratique/secteur-iut/faire-du-sport-a-liut">Site pour le sport</a>
+    </section>
 </footer>
