--- a/pages/contenu2.html
+++ b/pages/contenu2.html
@@ -45,3 +45,4 @@
 <p>Le restaurant lui propose un repas avec entrées, plats et desserts au choix.</p>
 <p>Les paiements s’effectuent avec Izly, c’est un service ou vous pouvez mettre une somme d’argent dessus et ensuite payer avec votre carte étudiant ou un QR Code sur le téléphone fourni par l’application.</p>
 <h2>Les absences</h2>
+<p>Il est possible d’avoir une absence ou un retard, ça arrive de se tromper, ou d’avoir un souci avec les transports justement ! Mais il faut être assidu, c'est-à-dire assister aux cours et on ne vous permet pas de rater beaucoup de cours. Par semestres (la moitié d’une année) vous avez le droit à maximum 5 absences, au-delà vous pouvez ne pas valider votre semestre (ce qui est embêtant pour obtenir le diplôme) et même vous voir retirer votre bourse et devoir la rembourser ! Ne jouez pas avec celà, justifiez vos absences deux jours après au maximum.</p>
