Modifications majeure du menu, des sous menu. Test de 3D pour le bouton d apparition du menu.

--- a/pages/error404.html
+++ b/pages/error404.html
@@ -1,7 +1,7 @@
 <div class="error404">
     <a href="index.php?page=index">
         <button>
-            <-- Back to main page
+            <img src="../img/404-arrow-back.png"> Back to main page
         </button>
     </a>
     
