--- a/pages/contenu2.html
+++ b/pages/contenu2.html
@@ -15,11 +15,12 @@
 <p>Les salles sont en accès libre en dehors des cours, il ne faut bien sûr pas détériorer le matériel.</p>
 <h2>Pour vous déplacer </h2>
 <p>Il y a 6 moyens de transports vous permettant de vous déplacer et qui sont accessibles proche de l'IUT</p>
-<ul>
-    <li>La marche à pied</li>
-    <li>Le bus</li>
-    <li>Le tram</li>
-    <li>Le métro</li>
+<ul class="transport">
+    <img src="/img/marche.png" alt="marche">
+    <img src="/img/tcl.png" alt="tcl">
+    <!--<li><img src="/img/bus.jpg" alt="bus"></li>
+    <li><img src="/img/t1.jpg" alt="tram"></li>
+    <li><img src="/img/metro.jfif" alt="metro"></li>-->
     <li>Le vélo</li>
     <li>La voiture/moto/scooter</li>
 </ul>
