Refonte navbar de gauche ternimée (pas à l abris de tweaks plus tard).

--- a/pages-sub-menus/sub1.html
+++ b/pages-sub-menus/sub1.html
@@ -1,7 +1,7 @@
 <ul>
     <li>
         <a href="#">
-            Les informations générales
+            Les informations<br>générales
         </a>
     </li>
     <li>
