--- a/pages-sub-menus/sub2.html
+++ b/pages-sub-menus/sub2.html
@@ -1,7 +1,7 @@
 <ul>
     <li>
         <a href="#">
-            L’IUT (le lieu d’apprentissage)
+            L’IUT, lieu d’apprentissage
         </a>
     </li>
     <li>
