--- a/pages/contenu2.html
+++ b/pages/contenu2.html
@@ -14,32 +14,29 @@
 <p>L'accès se fait avec la carte étudiante de 7h30 à 19h30 pendant la semaine.</p>
 <p>Les salles sont en accès libre en dehors des cours, il ne faut bien sûr pas détériorer le matériel.</p>
 <h2>Pour vous déplacer </h2>
-<p>Il y a 6 moyens de transports vous permettant de vous déplacer et qui sont accessibles proche de l'IUT</p>
-<ul class="transport">
-    <img src="/img/marche.png" alt="marche">
-    <img src="/img/tcl.png" alt="tcl">
-    <!--<li><img src="/img/bus.jpg" alt="bus"></li>
-    <li><img src="/img/t1.jpg" alt="tram"></li>
-    <li><img src="/img/metro.jfif" alt="metro"></li>-->
-    <li>Le vélo</li>
-    <li>La voiture/moto/scooter</li>
-</ul>
-<p>Choisissez un ou plusieurs moyens en fonction de l'emplacement de votre appartement, des endroits que vous fréquentez et de l’IUT. Aidez vous de Google Map pour calculer des distances et même visiter avec Street View !</p>
-<p>Après avoir pris ces informations en comptes et bien découvrez comment obtenir l’accès à ces services :</p>
-<ul>
-    <li>
+<p>Il y a plusieurs moyens de transports vous permettant de vous déplacer et qui sont accessibles proche de l'IUT</p>
+<div class="transport">
+    <a href="#pied"><img src="/img/marche.png" alt="marche"></a>
+    <a href="#tcl"><img src="/img/tcl.png" alt="tcl"></a>
+    <a href="#velo"><img src="/img/Velov.gif" alt="velo"></a>
+    <a href="#voiture"><img src="/img/voiture.png" alt="voiture"></a>
+</div>
+
+<section class="description">
+    <article id="pied">
         <p>Marcher à pied requiert simplement d’être en forme ! Il est très pratique pour de petites distances, franchement deux kilomètres c’est pas grand chose. C’est le moyen que vous allez le plus utiliser alors n’hésitez pas à faire des trajets à pied. Pour illustrer, 1.7 Km depuis la Cité Internationale de Lyon jusqu’à l’IUT prend environ 30 minutes.</p>
         <p>Sachez que la plupart de vos trajets feront souvent bien moins de distance que cet exemple, prenez en exemple le trajet entre le restaurant universitaire et l’IUT qui prend 10 minutes et pourtant 880m :</p>
-    </li>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d2782.3648886114274!2d4.876769815827186!3d45.78391707007316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x47f4c01c758eea87%3A0x175e10c89d56215d!2sIut%20Feyssine%2C%20Rue%20de%20la%20Technologie%2C%20Villeurbanne!3m2!1d45.787031999999996!2d4.8817454!4m5!1s0x47f4c02018d5e07d%3A0x17c7868f36b15cfa!2sJussieu%20University%20restaurant%2C%20Avenue%20Albert%20Einstein%2C%20Villeurbanne!3m2!1d45.7807952!2d4.8762273!5e0!3m2!1sfr!2sfr!4v1636446187830!5m2!1sfr!2sfr" width="800" height="325" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    <li>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d2782.3648886114274!2d4.876769815827186!3d45.78391707007316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x47f4c01c758eea87%3A0x175e10c89d56215d!2sIut%20Feyssine%2C%20Rue%20de%20la%20Technologie%2C%20Villeurbanne!3m2!1d45.787031999999996!2d4.8817454!4m5!1s0x47f4c02018d5e07d%3A0x17c7868f36b15cfa!2sJussieu%20University%20restaurant%2C%20Avenue%20Albert%20Einstein%2C%20Villeurbanne!3m2!1d45.7807952!2d4.8762273!5e0!3m2!1sfr!2sfr!4v1636446187830!5m2!1sfr!2sfr" width="800" height="325" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </article>
+    <article id="tcl">
         <p>Bus, Trams et Métros sont le même type de déplacement car ils sont géré par TCL. Il faut acheter un abonnement  et vous y aurez accès en illimité !</p>
         <p>Il y a deux tarifs pour le même abonnement, celui pour quelqu’un entre “18 - 25 ans” qui s’élève à 25€/mois et l’abonnement “Solidaire” à 10€/mois pour les boursiers, il faudra envoyer votre “Notification de bourse”</p>
         <p>Vous pouvez vous renseigner pour commander gratuitement une carte TCL et ensuite prendre l’abonnement totalement en ligne (référez vous en bas de page pour les liens utiles)</p>
-    </li>
-    <li>Le vélo est aussi un très bon moyen, vous pouvez avoir votre vélo et il faudra chercher les abris vélos (faites attention aux vols, prenez de bon antivols). La deuxième option est le Vélo’v, il nécessite un abonnement. Liens dans le bas de page</li>
-    <li>La voiture ou moto ou scooter si vous en avez un, cependant n'oubliez pas que l'on est à Lyon et qu'il y a des bouchons. Mais si vous tenez vraiment à venir avec votre véhicule personnel, il y a des parkings à proximité de l'IUT</li>
-</ul>
+    </article>
+    <article id="velo">Le vélo est aussi un très bon moyen, vous pouvez avoir votre vélo et il faudra chercher les abris vélos (faites attention aux vols, prenez de bon antivols). La deuxième option est le Vélo’v, il nécessite un abonnement. Liens dans le bas de page</article>
+    <article id="voiture">La voiture ou moto ou scooter si vous en avez un, cependant n'oubliez pas que l'on est à Lyon et qu'il y a des bouchons. Mais si vous tenez vraiment à venir avec votre véhicule personnel, il y a des parkings à proximité de l'IUT</article>
+</section>
+
 <h2>Où manger ?</h2>
 <p>Vous allez manger principalement à la cafétéria et au restaurant universitaire. Rien ne vous empêche de vous faire un tacos ou une pizza mais les prix sont sans concurrence dans les services pour étudiants (3.3€ le tarif normal et 1€ pour les boursiers).</p>
 <p>La cafétéria vend des repas du style sandwich, panini, muffins, cookies.</p>
