--- a/pages-sub-menus/sub2.html
+++ b/pages-sub-menus/sub2.html
@@ -4,27 +4,27 @@
 
 <ul>
     <li>
-        <a href="#">
+        <a href="#lieu">
             L’IUT (le lieu d’apprentissage)
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#acces">
             Accès au bâtiment
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#transport">
             Pour vous déplacer 
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#manger">
             Où manger ?
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#absences">
             Les absences
         </a>
     </li>
