--- a/pages-sub-menus/sub3.html
+++ b/pages-sub-menus/sub3.html
@@ -1,16 +1,21 @@
 <ul>
     <li>
-        <a href="#">
+        <a href="#eval">
             Les évaluations
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#matieres">
+            Les matières
+        </a>
+    </li>
+    <li>
+        <a href="#edt">
             Emplois du temps
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#sport">
             Sport
         </a>
     </li>
