--- a/pages/contenu2.html
+++ b/pages/contenu2.html
@@ -2,29 +2,29 @@
 <section class="part" id="lieu">
     <h2>L’IUT (le lieu d’apprentissage)</h2>
     <p>Il se trouve bon nombres de lieux forcément, ceux qui sont remarquable sont :</p>
-    <div>
-        <section>
+    <div class="lieux">
+        <div>
             <p>Des terrains de sports (basket, tennis, rugby, foot, etc):</p>
-        </section>
-        <section>
+        </div>
+        <div>
             <p>Des cafétérias comme le Studio:</p>
             <img src="/img/Studio.png" alt="studio">
-        </section>
-        <section>
+        </div>
+        <div>
             <p>Un restaurant universitaire (RU):</p>
             <img src="/img/ru.jpg" alt="ru">
-        </section>
-        <section>
+        </div>
+        <div>
             <p>Les bâtiments des formations:</p>
-        </section>
-        <section>
+        </div>
+        <div>
             <p>Des bibliothèques:</p>
             <img src="/img/Bib.jpg" alt="bibliothèques">
-        </section>
-        <section>
+        </div>
+        <div>
             <p>Deux amphithéâtres:</p>
             <img src="/img/amphi1.jpg" alt="amphi">
-        </section>
+        </div>
     </div>
     <p>Et aussi tout ce que l’on trouve en ville en général, mais qui n’a plus de liens avec l’IUT</p>
     <span>
@@ -45,32 +45,32 @@
         <a href="#velo"><img src="/img/Velov.gif" alt="velovlogo"></a>
         <a href="#voiture"><img src="/img/voiture.png" alt="voiture"></a>
     </div>
-    <section class="description">
-        <article id="pied">
+    <div class="description">
+        <div id="pied">
             <p>Marcher à pied requiert simplement d’être en forme ! Il est très pratique pour de petites distances, franchement deux kilomètres c’est pas grand chose. C’est le moyen que vous allez le plus utiliser alors n’hésitez pas à faire des trajets à pied. Pour illustrer, 1.7 Km depuis la Cité Internationale de Lyon jusqu’à l’IUT prend environ 30 minutes.</p>
             <p>Sachez que la plupart de vos trajets feront souvent bien moins de distance que cet exemple, prenez en exemple le trajet entre le restaurant universitaire et l’IUT qui prend 10 minutes et pourtant 880m :</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d2782.3648886114274!2d4.876769815827186!3d45.78391707007316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x47f4c01c758eea87%3A0x175e10c89d56215d!2sIut%20Feyssine%2C%20Rue%20de%20la%20Technologie%2C%20Villeurbanne!3m2!1d45.787031999999996!2d4.8817454!4m5!1s0x47f4c02018d5e07d%3A0x17c7868f36b15cfa!2sJussieu%20University%20restaurant%2C%20Avenue%20Albert%20Einstein%2C%20Villeurbanne!3m2!1d45.7807952!2d4.8762273!5e0!3m2!1sfr!2sfr!4v1636446187830!5m2!1sfr!2sfr" width="800" height="325" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </article>
-        <article class="pictures" id="tcl">
+        </div>
+        <div class="pictures" id="tcl">
             <p>Bus, Trams et Métros sont le même type de déplacement car ils sont géré par TCL. Il faut acheter un abonnement  et vous y aurez accès en illimité !</p>
             <p>Il y a deux tarifs pour le même abonnement, celui pour quelqu’un entre “18 - 25 ans” qui s’élève à 25€/mois et l’abonnement “Solclass="pictures" idaire” à 10€/mois pour les boursiers, il faudra envoyer votre “Notification de bourse”</p>
             <p>Vous pouvez vous renseigner pour commander gratuitement une carte TCL et ensuite prendre l’abonnement totalement en ligne (référez vous en bas de page pour les liens utiles)</p>
             <img src="/img/bus.jpg" alt="bus">
             <img src="/img/t1.jpg" alt="t1">
             <img src="/img/metro.jfif" alt="metro">
-        </article>
-        <article class="pictures" id="velo">
+        </div>
+        <div class="pictures" id="velo">
             <p>Le vélo est aussi un très bon moyen, vous pouvez avoir votre vélo et il faudra chercher les abris vélos (faites attention aux vols, prenez de bon antivols). La deuxième option est le Vélo’v, il nécessite un abonnement. Liens dans le bas de page</p>
             <img src="/img/velov.jpg" alt="velov1">
             <img src="/img/velo.jfif" alt="velo">
-        </article>
-        <article class="pictures" id="voiture">
+        </div>
+        <div class="pictures" id="voiture">
             <p>La voiture ou moto ou scooter si vous en avez un, cependant n'oubliez pas que l'on est à Lyon et qu'il y a des bouchons. Mais si vous tenez vraiment à venir avec votre véhicule personnel, il y a des parkings à proximité de l'IUT</p>
             <img src="/img/renault.png" alt="voiture img">
             <img src="/img/moto.png" alt="moto">
             <img src="/img/scooter.jpg" alt="scooter">
-        </article>
-    </section>
+        </div>
+    </div>
 </section>
 <section class="part2" id="manger">
     <h2>Où manger ?</h2>
