--- a/pages-sub-menus/sub1.html
+++ b/pages-sub-menus/sub1.html
@@ -1,26 +1,26 @@
 <ul>
     <li>
-        <a href="#">
+        <a href="#infos">
             Les informations<br>générales
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#cours">
             Les cours
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#prof">
             Les professeurs
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#admin">
             Administratif
         </a>
     </li>
     <li>
-        <a href="#">
+        <a href="#empla">
             L’emplacement de l’IUT
         </a>
     </li>
