--- a/pages/contenu3.html
+++ b/pages/contenu3.html
@@ -3,18 +3,37 @@
 <h2>Les évaluations</h2>
     <p>Vous serez évalué sur 6 compétences:</p>
     <div class="competences">
-        <p>Réaliser un développement d'application</p>
-        <p>Optimiser des applications informatiques</p>
-        <p>Administrer des systèmes informatiques communicants complexes</p>
-        <p>Gérer des données de l'information</p>
-        <p>Conduire un projet</p>
-        <p>Travailler dans une équipe informatique</p>
+        <span>
+            <p>Réaliser un développement d'application</p>
+            <div></div>
+        </span>
+        <span>
+            <p>Optimiser des applications informatiques</p>
+            <div></div>
+        </span>
+        <span>
+            <p>Administrer des systèmes informatiques communicants complexes</p>
+            <div></div>
+        </span>
+        <span>
+            <p>Gérer des données de l'information</p>
+            <div></div>
+        </span>
+        <span>
+            <p>Conduire un projet</p>
+            <div></div>
+        </span>
+        <span>
+            <p>Travailler dans une équipe informatique</p>
+            <div></div>
+        </span>
+
     </div>
-    <p>Pour valider votre semestre, il faudra maîtriser ces compétences</p>
+    <p>Pour valider votre semestre, il faudra maîtriser ces compétences.</p>
     <p>La validation de ses compétences se fait grâce :</p>
     <ul>
-        <li>Aux Situations d'Apprentissage et d'Évaluation, les “SAÉ” qui sont des projets de groupes entre plusieurs disciplines</li>
-        <li>Aux DS faits tout au long de l’année</li>
+        <li>Aux Situations d'Apprentissage et d'Évaluation, les “SAÉ” qui sont des projets de groupes entre plusieurs disciplines,</li>
+        <li>Aux DS faits tout au long de l’année.</li>
     </ul>
 </section>
 <section class="part" id="matieres">
@@ -36,6 +55,7 @@
     <p>Les horaires des cours sont comprises entre 8-12h et 14-18h, hormis le Vendredi après-midi où les horaires sont de 13h30-17h30.</p>
     <p>Les cours sont d’une durée de 1h50. Il y a des pauses de 20 minutes entre les heures de cours. La pause du midi est de 2h sauf le Vendredi. A part exception, il n’y a pas de cours le jeudi après-midi, ce temps peut être utilisé pour une activité régulière ou bien un rendez-vous.</p>
     <p>Vous trouverez votre emploi du temps sur le site prévu à cet effet. Cependant nous vous conseillons d’utiliser l’application EDT Univ disponible sur Apple et Android.</p>
+    <img src="/img/edt.png" alt="edt">
 </section>
 <section class="part" id="sport">
     <h2>Sport</h2>
