--- a/pages/contenu2.html
+++ b/pages/contenu2.html
@@ -16,6 +16,7 @@
         </div>
         <div>
             <p>Les bâtiments des formations:</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d877.6009016290725!2d4.883674287845494!3d45.78643155792544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sfr!4v1639318502670!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div>
             <p>Des bibliothèques:</p>
