Responsive des menus fonctionnelle.

--- a/pages-sub-menus/sub1.html
+++ b/pages-sub-menus/sub1.html
@@ -21,7 +21,7 @@
     </li>
     <li>
         <a href="#">
-            L’emplacement de l’IUT
+            L’emplacement<br>de l’IUT
         </a>
     </li>
 </ul>
