--- a/pages/formulaire.html
+++ b/pages/formulaire.html
@@ -1,6 +1,6 @@
 <form action="">
     <input name="Nom" placeholder="Nom">
     <input name="Prénom" placeholder="Prénom">
-    <textarea placeholder="type your message"></textarea>
+    <textarea placeholder="Taper votre message"></textarea>
     <button>Envoyer</button>
 </form>
