--- a/pages/footer.html
+++ b/pages/footer.html
@@ -1,36 +1,36 @@
-<footer>
+<footer role="contentinfo">
     <section>
         <h1>BUT en Général</h1>
         
-            <a href="https://iut.univ-lyon1.fr">Site de l'IUT</a>
-            <a href="https://www.univ-lyon1.fr">Site de l'Université</a>
-            <a href="https://mail.univ-lyon1.fr/">Boîte mail universitaire</a>
-            <a href="https://clarolineconnect.univ-lyon1.fr/">Clarolineconnect</a>
-            <a href="https://tomuss.univ-lyon1.fr/">Site pour les notes</a>
-            <a href="https://www.messervices.etudiant.gouv.fr/envole/">Site pour la bourse</a>
+            <a href="https://iut.univ-lyon1.fr" aria-label="Aller vers le site de l'iut">Site de l'IUT</a>
+            <a href="https://www.univ-lyon1.fr" aria-label="Aller vers le site de l'université">Site de l'Université</a>
+            <a href="https://mail.univ-lyon1.fr/" aria-label="Aller vers le site de la boîte mail universitaire">Boîte mail universitaire</a>
+            <a href="https://clarolineconnect.univ-lyon1.fr/" aria-label="Aller vers le site Clarolineconnect ">Clarolineconnect</a>
+            <a href="https://tomuss.univ-lyon1.fr/" aria-label="Aller vers le site des notes ">Site pour les notes</a>
+            <a href="https://www.messervices.etudiant.gouv.fr/envole/" aria-label="Aller vers le site de la bourse">Site pour la bourse</a>
     </section>
     <section>
         <h1>Autour de l'IUT</h1>
 
-            <a href="https://www.google.fr/maps ">Google Maps</a>
-            <a href="https://www.tcl.fr/">Site TCL</a>
-            <a href="https://e-tecely.tcl.fr/">Site E-TCL</a>
-            <a href="https://velov.grandlyon.com/fr/home">Site Vélo'V</a>
-            <a href="https://izly.fr/">Site Izly</a>
+            <a href="https://www.google.fr/maps " aria-label="Aller vers le site google maps">Google Maps</a>
+            <a href="https://www.tcl.fr/" aria-label="Aller vers le site des TCL">Site TCL</a>
+            <a href="https://e-tecely.tcl.fr/" aria-label="Aller vers le site E-TCL">Site E-TCL</a>
+            <a href="https://velov.grandlyon.com/fr/home" aria-label="Aller vers le site des VéloV ">Site Vélo'V</a>
+            <a href="https://izly.fr/" aria-label="Aller vers le site de Izly">Site Izly</a>
 
             <p>Application pour Izly</p>
-            <a href="https://play.google.com/store/apps/details?id=fr.smoney.android.izly.REC&hl=fr&gl=US">Sur Google Play</a>
-            <a href="https://apps.apple.com/fr/app/izly/id956519643">Sur Apple-Store</a>
+            <a href="https://play.google.com/store/apps/details?id=fr.smoney.android.izly.REC&hl=fr&gl=US" aria-label="Aller vers le site de l'application Izly sur Google Play">Sur Google Play</a>
+            <a href="https://apps.apple.com/fr/app/izly/id956519643" aria-label="Aller vers le site de l'application Izly sur l'Apple-Store">Sur Apple-Store</a>
     </section>
     <section>
         <h1>But Informatique</h1>
 
-            <a href="http://edt.univ-lyon1.fr">Site emploi du temps</a>
+            <a href="http://edt.univ-lyon1.fr" aria-label="Aller vers le site de l'emploie du temps">Site emploi du temps</a>
 
             <p>Application de l'emploie du temps</p>
-            <a href="https://apps.apple.com/fr/app/edt-univ/id1031220382">Apple-Store</a>
-            <a href="https://play.google.com/store/apps/details?id=fr.salanon.edtuniv&hl=en_US&gl=US">Google Play</a>
+            <a href="https://apps.apple.com/fr/app/edt-univ/id1031220382" aria-label="Aller vers le site de l'application pour l'emploi du temps sur l'Apple-Store">Apple-Store</a>
+            <a href="https://play.google.com/store/apps/details?id=fr.salanon.edtuniv&hl=en_US&gl=US" aria-label="Aller vers le site de l'application pour l'emploi du temps sur Google Play">Google Play</a>
 
-            <a href="https://suaps.univ-lyon1.fr/inscriptions-pratique/secteur-iut/faire-du-sport-a-liut">Site pour le sport</a>
+            <a href="https://suaps.univ-lyon1.fr/inscriptions-pratique/secteur-iut/faire-du-sport-a-liut" aria-label="Aller vers le site pour le sport">Site pour le sport</a>
     </section>
 </footer>
