--- a/pages-sub-menus/sub1.html
+++ b/pages-sub-menus/sub1.html
@@ -15,7 +15,7 @@
         </a>
     </li>
     <li>
-        <a href="#prof">
+        <a href="#admin">
             Administratif
         </a>
     </li>
