--- a/pages/contenu2.html
+++ b/pages/contenu2.html
@@ -57,73 +57,93 @@
 </p>
 
 
-
+<h2 id="absences">Les absences</h2>
+<p>
+    Il est possible d’avoir une absence ou un retard, ça arrive de se tromper, 
+    ou d’avoir un souci avec les transports justement ! Mais il faut être assidu, 
+    c'est-à-dire assister aux cours et on ne vous permet pas de rater beaucoup de cours. 
+    Par semestres (la moitié d’une année) vous avez le droit à maximum 5 absences, au-delà 
+    vous pouvez ne pas valider votre semestre (ce qui est embêtant pour obtenir le diplôme) 
+    et même vous voir retirer votre bourse et devoir la restituer ! Ne jouez pas avec celà, 
+    vous devez justifiez vos absences avec un délais de deux jours au maximum.
+</p>
 
 
 <h2 id="transport">Pour vous déplacer</h2>
 <p>
-    Il y a plusieurs moyens de transports vous permettant de vous déplacer et qui sont accessibles proche de l'IUT
+    Il y a plusieurs moyens de transports vous permettant de vous déplacer qui sont accessibles et proche de l'IUT :
 </p>
 
+<!--  OLD
 <div class="transport">
-    <a href="#pied"><img src="/img/marche.png" alt="marche"></a>
-    <a href="#tcl"><img src="/img/tcl.png" alt="tcl"></a>
-    <a href="#velo"><img src="/img/Velov.gif" alt="velovlogo"></a>
-    <a href="#voiture"><img src="/img/voiture.png" alt="voiture"></a>
+    <a href="#pied"><img src="/img/marche.png" alt="Marcher"></a>
+    <a href="#tcl"><img src="/img/tcl.png" alt="Reseau de Bus Tram et Metros TCL"></a>
+    <a href="#velo"><img src="/img/Velov.gif" alt="Velo'v"></a>
+    <a href="#voiture"><img src="/img/voiture.png" alt="Voiture"></a>
 </div>
+-->
 
 <div class="description">
-    <div id="pied">
+    <div>
         <p>
-            Marcher à pied requiert simplement d’être en forme ! Il est très pratique pour de petites
-                distances, franchement deux kilomètres c’est pas grand chose. C’est le moyen que vous allez
-                le plus utiliser alors n’hésitez pas à faire des trajets à pied. Pour illustrer, 1.7 Km
-                depuis la Cité Internationale de Lyon jusqu’à l’IUT prend environ 30 minutes.
+            Pour commencer, marcher à pied requiert simplement d’être en forme ! Il est très pratique pour de petites
+            distances, franchement deux kilomètres c’est pas grand chose. C’est le moyen que vous allez
+            le plus utiliser alors n’hésitez pas à faire des trajets à pied. Pour illustrer, 1.7 Km
+            depuis la Cité Internationale de Lyon jusqu’à l’IUT prend environ 25 minutes.
         </p>
         <p>
             Sachez que la plupart de vos trajets feront souvent bien moins de distance que cet exemple,
-                prenez en exemple le trajet entre le restaurant universitaire et l’IUT qui prend 10 minutes et pourtant 880m :
+            prenez en exemple le trajet entre le restaurant universitaire et l’IUT qui prend 10 minutes et pourtant 880m :
         </p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d2782.3648886114274!2d4.876769815827186!3d45.78391707007316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x47f4c01c758eea87%3A0x175e10c89d56215d!2sIut%20Feyssine%2C%20Rue%20de%20la%20Technologie%2C%20Villeurbanne!3m2!1d45.787031999999996!2d4.8817454!4m5!1s0x47f4c02018d5e07d%3A0x17c7868f36b15cfa!2sJussieu%20University%20restaurant%2C%20Avenue%20Albert%20Einstein%2C%20Villeurbanne!3m2!1d45.7807952!2d4.8762273!5e0!3m2!1sfr!2sfr!4v1636446187830!5m2!1sfr!2sfr" width="800" height="325" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="iframe-example-itineary" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d2782.3648886114274!2d4.876769815827186!3d45.78391707007316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x47f4c01c758eea87%3A0x175e10c89d56215d!2sIut%20Feyssine%2C%20Rue%20de%20la%20Technologie%2C%20Villeurbanne!3m2!1d45.787031999999996!2d4.8817454!4m5!1s0x47f4c02018d5e07d%3A0x17c7868f36b15cfa!2sJussieu%20University%20restaurant%2C%20Avenue%20Albert%20Einstein%2C%20Villeurbanne!3m2!1d45.7807952!2d4.8762273!5e0!3m2!1sfr!2sfr!4v1636446187830!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
-    <div class="pictures" id="tcl">
+    <div class="pictures">
         <p>
             Bus, Trams et Métros sont le même type de déplacement car ils sont géré par TCL.
-                Il faut acheter un abonnement  et vous y aurez accès en illimité !
+            Il faut acheter un abonnement  et vous y aurez accès en illimité !
         </p>
         <p>
             Il y a deux tarifs pour le même abonnement, celui pour quelqu’un entre “18 - 25 ans”
-                qui s’élève à 25€/mois et l’abonnement “Solclass="pictures" idaire” à 10€/mois pour les
-                boursiers, il faudra envoyer votre “Notification de bourse”
+            qui s’élève à 25€/mois et l’abonnement “Solclass="pictures" idaire” à 10€/mois pour les
+            boursiers, il faudra envoyer votre “Notification de bourse”
         </p>
         <p>
             Vous pouvez vous renseigner pour commander gratuitement une carte TCL et ensuite prendre
-                l’abonnement totalement en ligne (référez vous en bas de page pour les liens utiles)
+            l’abonnement totalement en ligne (référez vous en bas de page pour les liens utiles)
         </p>
-        <img src="/img/bus.jpg" alt="bus">
-        <img src="/img/t1.jpg" alt="t1">
-        <img src="/img/metro.jfif" alt="metro">
+
+        <article class="bunch-of-images">
+            <img src="/img/bus.jpg" alt="Bus">
+            <img src="/img/t1.jpg" alt="Tram">
+            <img src="/img/metro.jfif" alt="Metro">
+        </article>
     </div>
 
-    <div class="pictures" id="velo">
+    <div class="pictures">
         <p>
             Le vélo est aussi un très bon moyen, vous pouvez avoir votre vélo et il faudra
-                chercher les abris vélos (faites attention aux vols, prenez de bon antivols).
-                La deuxième option est le Vélo’v, il nécessite un abonnement. Liens dans le bas de page
+            chercher les abris vélos (faites attention aux vols, prenez de bon antivols).
+            La deuxième option est le Vélo’v, il nécessite un abonnement. Liens dans le bas de page
         </p>
-        <img src="/img/velov.jpg" alt="velov1">
-        <img src="/img/velo.jfif" alt="velo">
+
+        <article class="bunch-of-images">
+            <img src="/img/velov.jpg" alt="Velo'v">
+            <img src="/img/velo.jfif" alt="Vélo">
+        </article>
     </div>
 
-    <div class="pictures" id="voiture">
+    <div class="pictures">
         <p>
             La voiture ou moto ou scooter si vous en avez un, cependant n'oubliez pas que l'on est à Lyon
-                et qu'il y a des bouchons. Mais si vous tenez vraiment à venir avec votre véhicule personnel, il y a des parkings à proximité de l'IUT
+            et qu'il y a des bouchons. Mais si vous tenez vraiment à venir avec votre véhicule personnel, il y a des parkings à proximité de l'IUT.
         </p>
-        <img src="/img/renault.png" alt="voiture img">
-        <img src="/img/moto.png" alt="moto">
-        <img src="/img/scooter.jpg" alt="scooter">
+
+        <article class="bunch-of-images">
+            <img src="/img/renault.png" alt="Voiture">
+            <img src="/img/moto.png" alt="Moto">
+            <img src="/img/scooter.jpg" alt="Scooter">
+        </article>
     </div>
 </div>
 
@@ -141,30 +161,16 @@
     <p>
         La cafétéria vend des repas du style sandwich, panini, muffins, cookies.
     </p>
-    <img src="/img/stud.png" alt="stud">
+    <img src="/img/stud.png" alt="Stud">
 
     <p>
         Le restaurant lui propose un repas avec entrées, plats et desserts au choix.
     </p>
-    <img src="/img/Jussieu.png" alt="jussieu">
+    <img src="/img/Jussieu.png" alt="Jussieu">
 
     <p>
         Les paiements s’effectuent avec Izly, c’est un service ou vous pouvez mettre une somme d’argent 
         dessus et ensuite payer avec votre carte étudiant ou un QR Code sur le téléphone fourni par l’application.
     </p>
-    <img src="/img/Izly.png" alt="izly">
+    <img src="/img/Izly.png" alt="Izly" class="logo-crous">
 </div>
-
-
-
-
-<h2 id="absences">Les absences</h2>
-<p>
-    Il est possible d’avoir une absence ou un retard, ça arrive de se tromper, 
-    ou d’avoir un souci avec les transports justement ! Mais il faut être assidu, 
-    c'est-à-dire assister aux cours et on ne vous permet pas de rater beaucoup de cours. 
-    Par semestres (la moitié d’une année) vous avez le droit à maximum 5 absences, au-delà 
-    vous pouvez ne pas valider votre semestre (ce qui est embêtant pour obtenir le diplôme) 
-    et même vous voir retirer votre bourse et devoir la rembourser ! Ne jouez pas avec celà, 
-    justifiez vos absences deux jours après au maximum.
-</p>
