--- a/pages/contenu3.html
+++ b/pages/contenu3.html
@@ -1,63 +1,56 @@
 <h1>Le BUT Informatique</h1>
-<section class="part" id="eval">
-<h2>Les évaluations</h2>
-    <p>Vous serez évalué sur 6 compétences:</p>
-    <div class="competences">
-        <span>
-            <p>Réaliser un développement d'application</p>
-            <div></div>
-        </span>
-        <span>
-            <p>Optimiser des applications informatiques</p>
-            <div></div>
-        </span>
-        <span>
-            <p>Administrer des systèmes informatiques communicants complexes</p>
-            <div></div>
-        </span>
-        <span>
-            <p>Gérer des données de l'information</p>
-            <div></div>
-        </span>
-        <span>
-            <p>Conduire un projet</p>
-            <div></div>
-        </span>
-        <span>
-            <p>Travailler dans une équipe informatique</p>
-            <div></div>
-        </span>
 
-    </div>
-    <p>Pour valider votre semestre, il faudra maîtriser ces compétences.</p>
-    <p>La validation de ses compétences se fait grâce :</p>
-    <ul>
-        <li>Aux Situations d'Apprentissage et d'Évaluation, les “SAÉ” qui sont des projets de groupes entre plusieurs disciplines,</li>
-        <li>Aux DS faits tout au long de l’année.</li>
-    </ul>
-</section>
-<section class="part" id="matieres">
-    <h2>Les matières</h2>
-    <p>Les matières enseignées :</p>
-    <div class="matiere">
-        <p>Bases de programmation (C, Python, NodeJS)</p>
-        <p>Systèmes informatiques (Linux, Windows)</p>
-        <p>Base de données (SQL, PL SQL)</p>
-        <p>Développement web (Frontend et Backend)</p>
-        <p>Mathématiques</p>
-        <p>Economie et gestion</p>
-        <p>Expression et communication</p>
-        <p>Anglais</p>
-    </div>
-</section>
-<section class="part" id="edt">
-    <h2>Emplois du temps</h2>
-    <p>Les horaires des cours sont comprises entre 8-12h et 14-18h, hormis le Vendredi après-midi où les horaires sont de 13h30-17h30.</p>
-    <p>Les cours sont d’une durée de 1h50. Il y a des pauses de 20 minutes entre les heures de cours. La pause du midi est de 2h sauf le Vendredi. A part exception, il n’y a pas de cours le jeudi après-midi, ce temps peut être utilisé pour une activité régulière ou bien un rendez-vous.</p>
-    <p>Vous trouverez votre emploi du temps sur le site prévu à cet effet. Cependant nous vous conseillons d’utiliser l’application EDT Univ disponible sur Apple et Android.</p>
-    <img src="/img/edt.png" alt="edt">
-</section>
-<section class="part" id="sport">
-    <h2>Sport</h2>
-    <p>Comme vous avez pu le remarquer, le sport n’est pas une matière enseignée dans le BUT, cependant, vous avez la possibilité d’en faire en dehors de vos heures de cours. L’université propose plusieurs sports avec plusieurs horaires. Pour plus d’information, il y a sur le site de l’IUT tout ce qu’il faut.</p>
-</section>
+<h2 id="eval">Les évaluations</h2>
+<p>Vous serez évalué sur 6 compétences:</p>
+<div class="competences">
+    <span>
+        <p>Réaliser un développement d'application</p>
+    </span>
+    <span>
+        <p>Optimiser des applications informatiques</p>
+    </span>
+    <span>
+        <p>Administrer des systèmes informatiques communicants complexes</p>
+    </span>
+    <span>
+        <p>Gérer des données de l'information</p>
+    </span>
+    <span>
+        <p>Conduire un projet</p>
+    </span>
+    <span>
+        <p>Travailler dans une équipe informatique</p>
+    </span>
+
+</div>
+<p>Pour valider votre semestre, il faudra maîtriser ces compétences, leur validation se fait grâce :</p>
+<ul>
+    <li>Aux Situations d'Apprentissage et d'Évaluation, les “SAÉ” qui sont des projets de groupes entre plusieurs disciplines,</li>
+    <li>Aux DS faits tout au long de l’année.</li>
+</ul>
+
+
+<h2 id="matieres">Les matières</h2>
+<p>Les matières enseignées :</p>
+<div class="matiere">
+    <p>Bases de programmation (C, Python, NodeJS)</p>
+    <p>Systèmes informatiques (Linux, Windows)</p>
+    <p>Base de données (SQL, PL SQL)</p>
+    <p>Développement web (Frontend et Backend)</p>
+    <p>Mathématiques</p>
+    <p>Economie et gestion</p>
+    <p>Expression et communication</p>
+    <p>Anglais</p>
+</div>
+
+
+<h2 id="edt">Emplois du temps</h2>
+<p>Les horaires des cours sont comprises entre 8-12h et 14-18h, hormis le Vendredi après-midi où les horaires sont de 13h30-17h30.</p>
+<p>Les cours sont d’une durée de 1h50. Il y a des pauses de 20 minutes entre les heures de cours. La pause du midi est de 2h sauf le Vendredi. A part exception, il n’y a pas de cours le jeudi après-midi, ce temps peut être utilisé pour une activité régulière ou bien un rendez-vous.</p>
+<p>Vous trouverez votre emploi du temps sur le site prévu à cet effet. Cependant nous vous conseillons d’utiliser l’application EDT Univ disponible sur Apple et Android.</p>
+<img class="img-example-edt" src="/img/edt.png" alt="Exemple d'emploie du temps pour une semaine.">
+
+
+<h2 id="sport">Sport</h2>
+<p>Comme vous avez pu le remarquer, le sport n’est pas une matière enseignée dans le BUT, cependant, vous avez la possibilité d’en faire en dehors de vos heures de cours. L’université propose plusieurs sports avec plusieurs horaires. Pour plus d’information, il y a sur le site de l’IUT tout ce qu’il faut.</p>
+
