Aria (accesibilité) terminée.

--- a/pages/contenu2.html
+++ b/pages/contenu2.html
@@ -29,20 +29,19 @@
 
     <article>
         <h3>Les bâtiments des formations</h3>
-        <iframe class="iframe-batiment-formation" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d877.6009016290725!2d4.883674287845494!3d45.78643155792544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sfr!4v1639318502670!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="iframe-batiment-formation"  aria-label="Carte Google Maps vue aerrienne de l'IUT" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d877.6009016290725!2d4.883674287845494!3d45.78643155792544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sfr!2sfr!4v1639318502670!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
     </article>
 
     <article>
         <h3>Divers terrains (basket, tennis, rugby, foot, ...)</h3>
         <img src="/img/terrain-sport.png" alt="Terrain de Rugby">
     </article>
+
     <article>
         <h3>
-            Il y a aussi tout ce que l’on trouve en ville en général, mais qui n’a plus de liens avec l’IUT.
+            Il y a aussi tout le reste.
         </h3>
-    </article>
-    <article>
-        <iframe class="iframe-alentour-iut" src="https://www.google.com/maps/embed?pb=!4v1637652359160!6m8!1m7!1sx55tVYgw9n-etvzn_wIqGg!2m2!1d45.78617508716049!2d4.882091748838138!3f103.15738356446296!4f-6.134544036319227!5f0.7820865974627469" allowfullscreen="" loading="lazy"></iframe>
+        <iframe class="iframe-alentour-iut"  aria-label="Carte Google Maps en View Street autour de l'IUT" src="https://www.google.com/maps/embed?pb=!4v1637652359160!6m8!1m7!1sx55tVYgw9n-etvzn_wIqGg!2m2!1d45.78617508716049!2d4.882091748838138!3f103.15738356446296!4f-6.134544036319227!5f0.7820865974627469" allowfullscreen="" loading="lazy"></iframe>
     </article>
 </div>
 
@@ -113,11 +112,11 @@
             l’abonnement totalement en ligne (référez vous en bas de page pour les liens utiles)
         </p>
 
-        <article class="bunch-of-images">
+        <div class="bunch-of-images">
             <img src="/img/bus.jpg" alt="Bus">
             <img src="/img/t1.jpg" alt="Tram">
             <img src="/img/metro.jfif" alt="Metro">
-        </article>
+        </div>
     </div>
 
     <div class="pictures">
@@ -127,10 +126,10 @@
             La deuxième option est le Vélo’v, il nécessite un abonnement. Liens dans le bas de page
         </p>
 
-        <article class="bunch-of-images">
+        <div class="bunch-of-images">
             <img src="/img/velov.jpg" alt="Velo'v">
             <img src="/img/velo.jfif" alt="Vélo">
-        </article>
+        </div>
     </div>
 
     <div class="pictures">
@@ -139,11 +138,11 @@
             et qu'il y a des bouchons. Mais si vous tenez vraiment à venir avec votre véhicule personnel, il y a des parkings à proximité de l'IUT.
         </p>
 
-        <article class="bunch-of-images">
+        <div class="bunch-of-images">
             <img src="/img/renault.png" alt="Voiture">
             <img src="/img/moto.png" alt="Moto">
             <img src="/img/scooter.jpg" alt="Scooter">
-        </article>
+        </div>
     </div>
 </div>
 
