--- a/pages/contenu3.html
+++ b/pages/contenu3.html
@@ -3,24 +3,24 @@
 <h2 id="eval">Les évaluations</h2>
 <p>Vous serez évalué sur 6 compétences:</p>
 <div class="competences">
-    <span>
+    <div>
         <p>Réaliser un développement d'application</p>
-    </span>
-    <span>
+    </div>
+    <div>
         <p>Optimiser des applications informatiques</p>
-    </span>
-    <span>
+    </div>
+    <div>
         <p>Administrer des systèmes informatiques communicants complexes</p>
-    </span>
-    <span>
+    </div>
+    <div>
         <p>Gérer des données de l'information</p>
-    </span>
-    <span>
+    </div>
+    <div>
         <p>Conduire un projet</p>
-    </span>
-    <span>
+    </div>
+    <div>
         <p>Travailler dans une équipe informatique</p>
-    </span>
+    </div>
 
 </div>
 <p>Pour valider votre semestre, il faudra maîtriser ces compétences, leur validation se fait grâce :</p>
