--- a/pages/contenu1.html
+++ b/pages/contenu1.html
@@ -53,4 +53,4 @@
     Pour obtenir une bourse allez voir sur le site du CROUS “Mes services étudiants”, celà vous procure d’énormes avantages.
 </p>
 <h2 id="emplacement">L’emplacement de l’IUT</h2>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5727.768370545793!2d4.873508325523508!3d45.78411558583842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4c01c758eea87%3A0x175e10c89d56215d!2sIut%20Feyssine!5e0!3m2!1sfr!2sfr!4v1636445372422!5m2!1sfr!2sfr" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe class="iframe-map-iut" aria-label="Carte Google Maps de l'IUT" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5727.768370545793!2d4.873508325523508!3d45.78411558583842!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4c01c758eea87%3A0x175e10c89d56215d!2sIut%20Feyssine!5e0!3m2!1sfr!2sfr!4v1636445372422!5m2!1sfr!2sfr" allowfullscreen="" loading="lazy"></iframe>
